--- a/index.html
+++ b/index.html
@@ -40,7 +40,33 @@
         <li>1 3/4 cups (350gr) lukewarm water</li>
         <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
       </ul>
+      <h4>For the topping:</h4>
+      <ul>
+        <li>3 medium yellow onions, thinly aliced</li>
+        <li>1 tablespoon balsamic vinegar</li>
+        <li>1-2 tablespoons olive oil, for brushing on top</li>
+        <li>
+          10 ounces brie, cut into cubes (scrape rind off a paring knife if
+          desired, thought it's not necessary)
+        </li>
+        <li>1 1/2 cups fresh or frozen cranberries</li>
+      </ul>
+      <h3>Method</h3>
+      <hr />
+      <ol>
+        <li>
+          <b>Make the focaccia dough</b>
+          <br />
+          In a medium-sized mixing bowl, or in a stand mixer a paddle attahment,
+          mix together all the dough ingrdients untile the flour is fully
+          absorbed. You don't need to actually knead the dough, though I
+          sometimes knead it a few times in the bowl when mixing by hand to
+          incorporate the last flour..
+        </li>
+      </ol>
     </div>
-    <hr />
   </body>
+  <foo>
+    <p>Read more on <a href="#">Simply recipes</a></p>
+  </foo>
 </html>
