--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
       new favorite holiday starter!
     </p>
     <img class="focaccia1" src="./assets/focaccia.png" alt="focaccia" />
-    <p>Imagine: Sally Vegas</p>
-    <div class="feature">
-      <h4>FEATURED IN:</h4>
-      <a href="#">Fresh Cranberry That Go Beyond Sause</a>
-    </div>
+    <span class="sally">
+      <p>Imagine: Sally Vegas</p>
+    </span>
+    <span>
+      <div class="feature">
+        <h4>FEATURED IN:</h4>
+        <div class="fresh">
+          <p><u>Fresh Cranberry That Go Beyond Sause</u></p>
+        </div>
+      </div>
+    </span>
     <div class="ingredients">
       <h3>Ingredients</h3>
       <hr />
@@ -66,7 +72,7 @@
       </ol>
     </div>
   </body>
-  <foo>
+  <footer>
     <p>Read more on <a href="#">Simply recipes</a></p>
-  </foo>
+  </footer>
 </html>
