--- a/index.html
+++ b/index.html
@@ -6,72 +6,75 @@
     <title>Document</title>
     <title>CSS</title>
     <link rel="stylesheet" href="./style.css" />
+  </head>
+  <header>
     <div class="card">
       <img src="./assets/logo.png" alt="logo" />
     </div>
-  </head>
-  <header>
     <div class="fabulous">
       <p>Part of <b>A SIMPLY FABULOUS THANKSGIVING</b></p>
     </div>
   </header>
 
-  <body class="card-2">
-    <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
-    <p class="wow">
-      Wow your taste buds this festive focaccia appetizer topped with sweet
-      caramelized onions, tart cranberries, and creamy brie. It will become your
-      new favorite holiday starter!
-    </p>
-    <img class="focaccia1" src="./assets/focaccia.png" alt="focaccia" />
-    <span class="sally">
-      <p>Imagine: Sally Vegas</p>
-    </span>
-    <span>
-      <div class="feature">
-        <h4>FEATURED IN:</h4>
-        <div class="fresh">
-          <p><u>Fresh Cranberry That Go Beyond Sause</u></p>
+  <main>
+    <body class="card-2">
+      <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
+      <p class="wow">
+        Wow your taste buds this festive focaccia appetizer topped with sweet
+        caramelized onions, tart cranberries, and creamy brie. It will become
+        your new favorite holiday starter!
+      </p>
+      <img class="focaccia1" src="./assets/focaccia.png" alt="focaccia" />
+      <span class="sally">
+        <p>Imagine: Sally Vegas</p>
+      </span>
+      <span>
+        <div class="feature">
+          <h4>FEATURED IN:</h4>
+
+          <div class="fresh">
+            <p><u>Fresh Cranberry That Go Beyond Sause</u></p>
+          </div>
         </div>
+      </span>
+      <div class="ingredients">
+        <h3>Ingredients</h3>
+        <hr />
+        <h4>For the focaccia:</h4>
+        <ul>
+          <li>4 cups (500g) all purpose flour</li>
+          <li>1 1/2 teaspoons instant yeast</li>
+          <li>1 1/2 teaspoons salt</li>
+          <li>1 3/4 cups (350gr) lukewarm water</li>
+          <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
+        </ul>
+        <h4>For the topping:</h4>
+        <ul>
+          <li>3 medium yellow onions, thinly aliced</li>
+          <li>1 tablespoon balsamic vinegar</li>
+          <li>1-2 tablespoons olive oil, for brushing on top</li>
+          <li>
+            10 ounces brie, cut into cubes (scrape rind off a paring knife if
+            desired, thought it's not necessary)
+          </li>
+          <li>1 1/2 cups fresh or frozen cranberries</li>
+        </ul>
+        <h3>Method</h3>
+        <hr />
+        <ol>
+          <li>
+            <b>Make the focaccia dough</b>
+            <br />
+            In a medium-sized mixing bowl, or in a stand mixer a paddle
+            attahment, mix together all the dough ingrdients untile the flour is
+            fully absorbed. You don't need to actually knead the dough, though I
+            sometimes knead it a few times in the bowl when mixing by hand to
+            incorporate the last flour..
+          </li>
+        </ol>
       </div>
-    </span>
-    <div class="ingredients">
-      <h3>Ingredients</h3>
-      <hr />
-      <h4>For the focaccia:</h4>
-      <ul>
-        <li>4 cups (500g) all purpose flour</li>
-        <li>1 1/2 teaspoons instant yeast</li>
-        <li>1 1/2 teaspoons salt</li>
-        <li>1 3/4 cups (350gr) lukewarm water</li>
-        <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
-      </ul>
-      <h4>For the topping:</h4>
-      <ul>
-        <li>3 medium yellow onions, thinly aliced</li>
-        <li>1 tablespoon balsamic vinegar</li>
-        <li>1-2 tablespoons olive oil, for brushing on top</li>
-        <li>
-          10 ounces brie, cut into cubes (scrape rind off a paring knife if
-          desired, thought it's not necessary)
-        </li>
-        <li>1 1/2 cups fresh or frozen cranberries</li>
-      </ul>
-      <h3>Method</h3>
-      <hr />
-      <ol>
-        <li>
-          <b>Make the focaccia dough</b>
-          <br />
-          In a medium-sized mixing bowl, or in a stand mixer a paddle attahment,
-          mix together all the dough ingrdients untile the flour is fully
-          absorbed. You don't need to actually knead the dough, though I
-          sometimes knead it a few times in the bowl when mixing by hand to
-          incorporate the last flour..
-        </li>
-      </ol>
-    </div>
-  </body>
+    </body>
+  </main>
   <footer>
     <p>Read more on <a href="#">Simply recipes</a></p>
   </footer>
